--- a/css/06_demo/index3.html
+++ b/css/06_demo/index3.html
@@ -12,34 +12,43 @@
             margin: 0;
             padding: 0;
         }
-        article{
+        
+        article {
             border-top: 10px solid goldenrod;
         }
-        article{
+
+        article {
             display: grid;
             grid-template-columns: 1fr 300px;
             row-gap: 40px;
             column-gap: 50px;
         }
-        header{
+
+        header {
             grid-column: 1/-1;
         }
-        header{
+
+        header {
             padding: 20px 20px;
             background-color: rgba(138, 136, 136, 0.185);
         }
-        header>h2{
-            float: left;
+        header{
+            display: flex;
+            justify-content: space-between;
+        }
+        header>h2 {
+            display: inline-block;
             font-family: sans-serif;
             text-transform: uppercase;
             font-style: italic;
             color: goldenrod;
         }
-        header>h2::first-letter{
+
+        header>h2::first-letter {
             font-style: normal;
         }
-        header>a{
-            float: right;
+
+        header a {
             color: black;
             text-decoration: none;
             margin-left: 15px;
@@ -48,29 +57,35 @@
             font-weight: bold;
             color: goldenrod;
         }
-        header>a::first-letter{
+
+        header>a::first-letter {
             text-transform: uppercase;
         }
-        main>div{
+
+        main>div {
             margin-top: 20px;
             position: relative;
         }
-        main>div>span{
+
+        main>div>span {
             position: absolute;
             top: 20px;
             left: 60px;
             font-family: sans-serif;
         }
-        main>h1{
+
+        main>h1 {
             font-family: sans-serif;
             color: goldenrod;
             font-size: 35px;
         }
-        main>img{
+
+        main>img {
             margin-top: 10px;
             margin-bottom: 10px;
         }
-        aside{
+
+        aside {
             background-color: rgba(138, 136, 136, 0.185);
             align-self: start;
             padding: 20px 50px;
@@ -78,29 +93,55 @@
             border-bottom: 10px solid goldenrod;
 
         }
-        aside>ul{
+
+        aside>ul {
             list-style: none;
             margin-top: 20px;
         }
-        aside>h3{
+
+        aside>h3 {
             font-family: sans-serif;
             text-transform: uppercase;
         }
-        article{
+
+        article {
             padding: 0 50px;
         }
-        main>p{
+
+        main>p {
             font-family: sans-serif;
             font-weight: bold;
         }
-        footer{
+
+        footer {
             grid-column: 1/-1;
             font-family: sans-serif;
             font-weight: bold;
         }
-        @media(max-width:768px){
-            .content{
-                grid
+
+        @media(max-width:768px) {
+            .content {
+                grid-template-columns: 1fr;
+            }
+            aside {
+                grid-row: 2/3;
+            }
+
+            article {
+                padding: 0 0;
+            }
+
+            main>img {
+                width: 100%;
+            }
+            header{
+                display: block;
+            }
+            header div a{
+                font-size: 18px;
+            }
+            aside{
+                justify-self: start;
             }
         }
     </style>
@@ -110,10 +151,12 @@
     <article class="content">
         <header>
             <h2>😣the code magazine</h2>
-            <a href="#">blog</a>
-            <a href="#">challenges</a>
-            <a href="#">flexbox</a>
-            <a href="#">cssgrid</a>
+            <div>
+                <a href="#">blog</a>
+                <a href="#">challenges</a>
+                <a href="#">flexbox</a>
+                <a href="#">cssgrid</a>
+            </div>
         </header>
         <main class="body">
             <h1>The Basic Language of the Web:CSS</h1>
