--- a/css/09_demo/component-2.html
+++ b/css/09_demo/component-2.html
@@ -34,20 +34,78 @@
         }
         article{
             display: flex;
-            align-items: center;
+            /* align-items: center; */
             gap: 48px;
             padding: 24px;
             border-radius: 8px;
             padding-left: 80px;
+            position: relative;
         }
         article img{
             height: 350px;
             border-radius: 8px;
             /* 图像通过transform来缩放图片 */
             transform: scale(1.3);
+            box-shadow: 0 12px 24px rgba(0, 0, 0, 0.25);
+
+        }
+        blockquote{
+            align-self: center;
         }
         blockquote p:nth-child(1){
             text-align: justify;
+        }
+        .btn{
+            width: 40px;
+            height: 40px;
+            background-color: #fff;
+            border: none;
+            position: absolute;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 50%;
+            box-shadow: 0 12px 24px rgba(0, 0, 0, 0.25);
+        }
+        .icon{
+            width: 24px;
+            height: 24px;
+            stroke: #099268;
+        }
+        .btn--left{
+            left: 0;
+        }
+        .btn--right{
+            right: 0px;
+        }
+        /* 这里通过绝对定位让btn上下居中 */
+        .btn--left,.btn--right{
+            cursor: pointer;
+            top: 50%;       
+            /* 这里距离top 50%指离父元素top距离为父元素的高度的50%+btn的高度 */
+            /* 所以我们需要上移btn元素高度的50%来达到居中 */
+            transform: translate(-50%,-50%);
+        }
+        .btn--right{
+            transform: translate(50%,-50%);
+        }
+        .round{
+            width: 14px;
+            height: 14px;
+            border-radius: 50%;
+            border: #099268 solid 2px;
+            cursor: pointer;
+        }
+        footer{
+            display: flex;
+            gap: 8px;
+            position: absolute;
+            left: 50%;
+            bottom: 0;
+            transform: translate(-50%,200%);
+        }
+        .active{
+            background-color: #099268;
         }
     </style>
 </head>
@@ -68,18 +126,24 @@
             <p>Maria de Almeida</p>
             <p>Senior Product Manager at EDP Comercial</p>
         </blockquote>
-        <button>
+        <button  class="btn btn--left">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
-                class="w-6 h-6">
+                class="icon">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5L8.25 12l7.5-7.5" />
             </svg>
         </button>
-        <button>
+        <button class="btn btn--right">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
-                class="w-6 h-6">
+                class="icon">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
             </svg>
         </button>
+        <footer>
+            <div class="round active"></div>
+            <div class="round"></div>
+            <div class="round"></div>
+            <div class="round"></div>
+        </footer>
     </article>
 </body>
 </html>
